Last commit of the day.

--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -6,6 +6,7 @@ bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
 bind "6" "slot6"
+bind "7" "headtrack_reset_home_pos"
 bind "a" "+moveleft"
 bind "b" "+showbudget"
 bind "c" "impulse 50"
@@ -15,7 +16,7 @@ bind "f" "impulse 100"
 bind "g" "phys_swap"
 bind "k" "kill"
 bind "n" "ent_fire !picker Use"
-bind "p" "headtrack_reset_home_pos"
+bind "p" "ai_show_connect"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
@@ -232,7 +233,7 @@ g_antlion_cascade_push "1"
 windows_speaker_config "4"
 snd_legacy_surround "0"
 snd_pitchquality "1"
-volume "0.340000"
+volume "1.000000"
 snd_musicvolume "0.440000"
 snd_mixahead "0.10"
 adsp_debug "0"
